@@ -5,6 +5,8 @@ Release 5.0.8 (Unreleased)
 Bug fixes
 ---------
 
+- Fix parallel interlock in some cases where using the 1D thermal wall model.
+
 - GUI: delete scalar profile and time average when deleting the scalar itself.
 
 - Fix issue #251 (crash for periodicity in parallel in some cases).
